# solscope-program

./: .gitignore  Anchor.toml  Cargo.toml
programs/solscope/: Cargo.toml
programs/solscope/src/: assert_vault.rs  constants.rs  errors.rs  execute_trade.rs  fund_vault.rs  lib.rs  mod.rs  register_bot.rs  set_paused.rs  state.rs  withdraw.rs
