[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.49.0" }
constant_time_eq = {
  git = "https://github.com/RustCrypto/utils",
  rev = "9f6a6e3",
  package = "constant_time_eq"
}
